# 1_0_creating_window

./: .gitignore  CMakeLists.txt  Makefile  README.md  gl_draw_shape.h  gl_includes.h  gl_shaders.h  gl_simple_shader.h  glfw_context.h  vbo.h  window.cpp
